--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry excluding="jar/" kind="src" path="Java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/jake/hw4-640/Java/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jake/hw4-640/Java/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jake/hw4-640/Java/system-rules-1.15.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
